# aqi_predict

./: .gitignore  README.md
airflow/: .env  docker-compose.yml  dockerfile  pyproject.toml
airflow/dags/: .env.default  ml_pipeline_dag.py
app-api/: .env.default
app-api/api/: config.py  views.py
app-api/api/schemas/: __init__.py  predictions.py
app-frontend/frontend/: components.py  main.py  settings.py
batch-prediction-pipeline/: pyproject.toml
batch-prediction-pipeline/batch_prediction_pipeline/: batch.py
batch-prediction-pipeline/batch_prediction_pipeline/modules/: data.py  utils.py
deploy/: app-docker-compose.yml
feature-pipeline/: .env  pyproject.toml
feature-pipeline/feature_pipeline/: .gitignore  feature_view.py  pipeline.py  settings.py
feature-pipeline/feature_pipeline/configs/: config.json
feature-pipeline/feature_pipeline/elt/: data_loader.py  data_retrieve.py  data_transform.py
training-pipeline/: .env  pyproject.toml
training-pipeline/training_pipeline/: best_config.py  hyperparameter_tuning.py  train.py
training-pipeline/training_pipeline/configs/: config_hyperparameter.json
training-pipeline/training_pipeline/modules/: data_transform.py  feature_store_data_loader.py  models.py  utils.py
